# repro-pants-lockfile-fasttext

./: pants.toml  pyproject.toml
